tests/sawn/fixtures/invalid/01_bare_string_value.sawn
// INVALID: Unquoted string value (strings must be quoted)
name=Luke
